<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:compat="http://schemas.android.com/tools"


    >
    <item
        android:id="@+id/menu_item_new_crime"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_crime">
    </item>
    <item
        android:id="@+id/menu_item_show_subtitle"
        android:title="@string/show_subtitle">
    </item>
    <item
        android:id="@+id/menu_item_hide_subtitle"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/hide_subtitle">
    </item>
    <item
        android:id="@+id/menu_item_subtitle_format"
        android:title="@string/subtitle_format">
    </item>
</menu>